--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Trivia",
   "version": "1.0.0",
   "description": "Trivia game",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mariamawit-a/Trivia#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1"
   }
 }
