--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "Trivia",
   "version": "1.0.0",
   "description": "Trivia game",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,11 @@
   "homepage": "https://github.com/mariamawit-a/Trivia#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "express": "^4.17.1"
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0"
   }
 }
