--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "jquery": "^3.5.1",
     "morgan": "^1.10.0"
   }
 }
