--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "jquery": "^3.5.1",
-    "morgan": "^1.10.0"
+    "less": "^3.12.2",
+    "morgan": "^1.10.0",
+    "node-sass": "^4.14.1"
   }
 }
