--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-errors": "^1.8.0",
     "jquery": "^3.5.1",
     "less": "^3.12.2",
+    "meaningful-string": "^1.3.1",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1"
   }
