--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "firebase": "^7.17.2",
     "http-errors": "^1.8.0",
     "jquery": "^3.5.1",
-    "less": "^3.12.2",
-    "meaningful-string": "^1.3.1",
-    "morgan": "^1.10.0",
-    "node-sass": "^4.14.1"
+    "morgan": "^1.10.0"
   }
 }
